# LinkA

./: .gitignore  CMakeLists.txt  README.md  glad.c  head.cpp  main.cpp
include/: AStar.h  AStarPathFinder.h  AStarPathFinder.hpp  AssetManager.h  BasicRender.h  Camera.h  CameraController.h  Game.h  GameEvent.h  GameObject.h  InputEvent.h  LinkA.h  LinkAFinder.h  LinkAGame.h  LinkALog.h  LinkAPathFinder_1.h  LinkAViewPort.h  MainScreen.h  ObjUtil.h  OrthographicCamera.h  PerspectCamera.h  Screen.h  Shader.h  SpriteRender.h  TextApplication.h  Texture.h  miscellaneous.h  utf8.h
include/game_obj/: Board.h  Card.h  LevelPick.h
include/screen/: PickLevelScreen.h
include/sound/: SoundLoader.h  SoundManager.h
logs/: basic-log.txt  rotating.txt
shader/basic/: simple.frag  simple.vert
shader/simple/: simple.frag  simple.vert
shader/text_simple/: text.frag
src/: AssetManager.cpp  BasicRender.cpp  Camera.cpp  CameraController.cpp  GameEvent.cpp  InputEvent.cpp  LinkA.cpp  LinkAGame.cpp  LinkAPathFinder.cpp  LinkAViewPort.cpp  MainScreen.cpp  ObjUtil.cpp  OrthographicCamera.cpp  PerspectCamera.cpp  Shader.cpp  SpriteRender.cpp  TextApplication.cpp  Texture.cpp
src/game_obj/: Board.cpp  Card.cpp  LevelPick.cpp
src/screen/: PickLevelScreen.cpp
src/sound/: SoundLoader.cpp  SoundManager.cpp
